issue32: Move mouse over toolbox options buttons moves search box - added transparent border to avoid shifting on hover

--- a/chrome/skin/classic/shared/toolbox.css
+++ b/chrome/skin/classic/shared/toolbox.css
@@ -85,5 +85,5 @@
 }
 
 .theme-firebug #toolbox-option-container #toolbox-tab-options {
-    border: 0;
+    border: 1px solid transparent;
 }
